force-app/main/default/objects/Application__c/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Additional Contact)</relationshipLabel>
    <relationshipName>Applications_Additional_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>