force-app/main/default/objects/Application__c/fields/Annual_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Annual_Take_Home_Pay__c</fullName>
    <formula>Annual_Salary__c  -( Federal_Tax_Amount__c +  Medicare_Withholding__c +  Social_Security__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>