force-app/main/default/objects/Application__c/fields/Application_Manager__c.field-meta.xml
<CustomField>
    <fullName>Application_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Application Manager</description>
    <label>Application Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>