force-app/main/default/objects/Application__c/fields/Date_Saved__c.field-meta.xml
<CustomField>
    <fullName>Date_Saved__c</fullName>
    <description>Date application was saved</description>
    <label>Date Saved</label>
    <type>Date</type>
</CustomField>