force-app/main/default/objects/Application__c/fields/Desired_Salary__c.field-meta.xml
<CustomField>
    <fullName>Desired_Salary__c</fullName>
    <description>Enter desired salary to calculate net pay</description>
    <label>Desired Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>