force-app/main/default/objects/Application__c/fields/Federal_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_Amount__c</fullName>
    <label>Federal Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>