force-app/main/default/objects/Application__c/fields/Follow__c.field-meta.xml
<CustomField>
    <fullName>Follow__c</fullName>
    <description>Date to follow up after application submitted</description>
    <inlineHelpText>Date to follow up after application submitted</inlineHelpText>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>