force-app/main/default/objects/Application__c/fields/Monthly_Take_Home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Take_Home_Pay__c</fullName>
    <formula>Annual_Take_Home_Pay__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Take-Home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>