force-app/main/default/objects/Application__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <description>Company Primary Contact</description>
    <formula>Job_Number__r.Primary_Contact__r.FirstName &amp; &apos; &apos; &amp;  Job_Number__r.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact</label>
    <type>Text</type>
</CustomField>