force-app/main/default/objects/Application__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Secondary Contact)</relationshipLabel>
    <relationshipName>Applications1_SecondaryContact</relationshipName>
    <type>Lookup</type>
</CustomField>